--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,16 @@
 
 /* Your CSS Code here. */
+body {
+            font-family: Arial, sans-serif;
+        }
+.question-space {
+            max-width: 600px;
+            margin: 10px;
+            padding: 15px;
+            
+            background-color: #f8fffe;
+            font-weight: bold;
+        }
+blockquote{
+	border-left: 8px solid green;
+}
